fixed drop-down to header spacing

--- a/css/hamnav.css
+++ b/css/hamnav.css
@@ -48,8 +48,8 @@ header{
 }
 .menu{z-index:1000000; font-weight:bold; font-size:0.8em; width:100%; background:#FDD949;  position:absolute; text-align:center;}
 .menu ul {margin: 0; padding: 0; list-style-type: none; list-style-image: none;}
-.menu li {display: block;   padding:15px 0 15px 0; border-bottom:#1d1f20 1px solid;}
-.menu li:hover{display: block;    background:#FDD949; padding:15px 0 15px 0; border-bottom:#1d1f20 1px solid;}
+.menu li {display: block;   padding:25px 0 25px 0; border-bottom:#1d1f20 1px solid;}
+.menu li:hover{display: block;    background:#FDD949; padding:25px 0 25px 0; border-bottom:#1d1f20 1px solid;}
 .menu ul li a { text-decoration:none;  margin: 0px; color:#000;}
 .menu ul li a:hover {  color: #fff; text-decoration:none;}
 .menu a{text-decoration:none; color:grey;}
